--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -438,9 +438,9 @@
   "f8bfc32b-5bc4-4ccc-82ed-514dffd011c2": "Straatnaam",
   "99ea968b-f820-4791-96c3-bb1033603013": "Huisnummer",
   "8265d9e0-32c1-453c-ab2f-d31f1eb244c3": "Proefperiodes",
-  "89a760d7-8995-458c-9635-da104971e95c": "Via proefperiodes kan je nieuwe leden de kans geven om in te schrijven zonder te betalen. Na een ingestelde periode krijgen ze vervolgens een betaalverzoek (vroeger betalen is steeds mogelijk) en kunnen ze betalen via het ledenportaal. Als je leden voor het einde van de proefperiode terug uitschrijft, wordt het openstaande bedrag ook verwijderd.",
+  "89a760d7-8995-458c-9635-da104971e95c": "Via proefperiodes kan je nieuwe leden de kans geven om in te schrijven zonder te (laten) betalen. Na een ingestelde periode krijgen ze vervolgens een betaalverzoek (vroeger betalen is steeds mogelijk) en kunnen ze betalen via het ledenportaal. Eenmaal de proefverzekering verlopen is, komen deze leden op de eerstvolgende aanrekening door #koepel. Als je leden voor het einde van de proefperiode terug uitschrijft, wordt het openstaande bedrag ook verwijderd.",
   "f0ceba51-bad2-4454-9a9b-4b12f0983c82": "Aantal dagen op proef",
-  "d68a6d63-d782-49e2-84a5-4f77dbfa2977": "Nieuwe leden hebben automatisch recht op een proefperiode van {days} voor de aansluiting bij KSA Nationaal.",
+  "d68a6d63-d782-49e2-84a5-4f77dbfa2977": "#koepel raadt een proefperiode van {days} aan.",
   "5ecd5e10-f233-4a6c-8acd-c1abff128a21": "Datum eerste activiteit of vergadering",
   "db636f2c-371d-4209-bd44-eaa6984c2813": "Als nieuwe leden inschrijven voor deze datum, begint de proefperiode pas te lopen vanaf deze datum. Handig als de activiteiten pas na het begin van de inschrijvingen starten.",
   "99b87ddc-3a72-45fa-923a-10bf130fb4de": "Volgjaar",
