--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -5567,7 +5567,7 @@
   "037e9189-33ef-44c1-bad2-ff3ea3da0629": "Alle communicatie wordt via deze afzender verstuurd tenzij er voor een specifieke inschrijvingsgroep of webshop een andere afzender staat ingesteld",
   "4a58b661-087b-4951-9643-2b00352bba85": "Toegangsrechten instellen",
   "d040c8bd-23d1-42c3-a609-5e2febc12f07": "Stel in wie met dit e-mailadres kan versturen en wie verzonden berichten kan bekijken.",
-  "e01618ed-7f4f-4a80-a926-3afb7b3806fc": "Kies hier wie berichten van versturen en wie verstuurde berichten kan bekijken.",
+  "e01618ed-7f4f-4a80-a926-3afb7b3806fc": "Kies hier wie berichten kan versturen en wie verstuurde berichten kan bekijken.",
   "a3e11da3-1894-4519-99a8-ac5fb32c555d": "Naam",
   "ea84aed8-48ce-4a43-b391-0a4a16782909": "Verwijderen"
 }
