Improved senderId error messages and improved empty senders handling
fixes STA-859

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -2567,9 +2567,9 @@
   "59367bfa-a918-4475-8d90-d9e3d6c71ad8": "Nieuwe e-mail",
   "d76495d1-251b-4cf1-9ca1-7e7ac33a046f": "Bijlage toevoegen",
   "20bacd85-5b82-4396-bbd5-b6d88e7d90e4": "Sjablonen",
-  "ae013398-3667-40ff-ad66-c0cd0050f35c": "Stel eerst jouw e-mailadressen in",
+  "ae013398-3667-40ff-ad66-c0cd0050f35c": "Voeg minstens één afzender toe, voor je berichten kan versturen.",
   "9ee80b2b-1edd-4ae0-9d18-374b3c1f864a": "Wijzigen",
-  "9ec8b45b-3321-4c1a-90bb-74e22c3e7f09": "Een hoofdbeheerder van jouw vereniging moet eerst e-mailadressen instellen voor je een e-mail kan versturen.",
+  "9ec8b45b-3321-4c1a-90bb-74e22c3e7f09": "Een hoofdbeheerder van jouw vereniging moet eerst een afzender toevoegen die je kan gebruiken voor je een bericht kan versturen.",
   "2faa00db-5af7-4556-ac49-5b15abf2182f": "Regio",
   "7335fc4d-f993-415c-976b-f32af724907e": "Kies voor welke groepen deze activiteit zichtbaar is.",
   "0ca73738-0649-4dbd-b5d7-b54f03140372": "Wanneer",
@@ -5500,7 +5500,7 @@
   "621c533c-23fe-43b5-b493-a4352ac479d2": "Kijk dit nog even na",
   "f7b7ac75-f7df-49cc-8961-b2478d9683e3": "Je hebt nog geen toegangsrechten gekregen om berichten te versturen. Vraag aan een hoofdbeheerder om jou toegang te geven via de instellingen van #platform.",
   "1b509614-30b0-484c-af72-57d4bc9ea788": "Je hebt geen toegangsrechten om emails te versturen naar deze afzender.",
-  "94adb4e0-2ef1-4ee8-9f02-5a76efa51c1d": "De afzender die je hebt gekozen bestaat niet meer. Probeer een andere afzender te kiezen.",
+  "94adb4e0-2ef1-4ee8-9f02-5a76efa51c1d": "De afzender die je hebt gekozen bestaat niet meer. Probeer een andere afzender te kiezen. Herlaad indien nodig de app.",
   "f08cccb3-faf9-473f-b729-16120fadec9c": "De afzender van deze email bestaat niet meer. Probeer een andere afzender te kiezen.",
   "a6304a41-8c83-419b-8e7e-c26f4a047c19": "Communicatie",
   "feae4831-c229-4b2a-8dc1-c65184cbdfec": "Hier vind je een historiek van alle communicatie die werd verzonden. Wil je graag een bericht versturen, selecteer dan via het tabblad 'leden' of 'bestellingen' alle leden of bestellingen waar je naar wilt mailen.",
