Updated email copy to senders

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -1158,7 +1158,7 @@
   "05e6464f-8db4-4c12-9bfe-527afc83d412": "Gegevensverzameling",
   "cce92c4c-1cdf-4a22-9f1a-89f888046cde": "E-mails",
   "7766ee8a-cd92-4d6f-a3fa-f79504fbcdda": "E-mailadressen",
-  "bb6d79a2-f70f-4494-924e-7ebc27a4f0da": "Wijzig de e-mailadressen waaruit e-mails verzonden kunnen worden.",
+  "bb6d79a2-f70f-4494-924e-7ebc27a4f0da": "Wijzig de e-mailadressen waaruit berichten verzonden kunnen worden.",
   "f0b50a39-d4fd-4f97-802d-a599b00030fd": "E-mailsjablonen",
   "ba4eeb34-6c93-4537-92ac-ea4f30c28fbb": "Wijzig de inhoud van automatische en opgeslagen e-mails.",
   "109d60b0-5a19-4d15-9320-483e383f9f89": "Ongebruikte functionaliteiten",
@@ -2551,8 +2551,8 @@
   "709a5ff3-8d79-447b-906d-2c3cdabb41cf": "Onderwerp",
   "6a972ca2-8a5f-4e9d-bb26-b59e1f7165a2": "E-mail template",
   "13b42902-e159-4e6a-8562-e87c9c691c8b": "Typ hier het onderwerp van je e-mail",
-  "c5602934-95a8-437d-b576-eda8d9e6565e": "E-mailadres toevoegen",
-  "ed3e84f0-7ab3-467b-948f-0423ccbf2056": "E-mailadres bewerken",
+  "c5602934-95a8-437d-b576-eda8d9e6565e": "Afzender toevoegen",
+  "ed3e84f0-7ab3-467b-948f-0423ccbf2056": "Afzender bewerken",
   "85f5de69-bc8a-4f8d-be68-e6b05f6affce": "Voor algemene e-mails of voor antwoorden op automatische e-mails als domeinnaam niet ingesteld is (bv. als antwoord op bestelbevestiging).",
   "c0b96584-ebf2-452b-89e2-0bea5e63eb74": "Inschrijvingsgroepen",
   "a481dcc6-d66e-4098-adc4-66ae9b1ed35f": "Selecteer de groepen die standaard met dit e-mailadres moeten versturen.",
@@ -2560,7 +2560,7 @@
   "a059bcec-d0a2-42c4-a7fc-0fade27c9b0e": "Naam / aanspreking (optioneel)",
   "23302106-6c68-4b4a-8d48-6a7c0debdeb8": "Optioneel. bv. Webshopverantwoordelijke",
   "70c99ed2-97be-4252-b7c4-6cd46d5c9513": "E-mailadres waarmee je wilt versturen",
-  "ecc5560e-bd85-4f2a-bbb2-d0a26f8ead45": "Wijzig de e-mailadressen waarmee je e-mails kan versturen. Alle informatie over e-mailadressen en e-mails vind je op",
+  "ecc5560e-bd85-4f2a-bbb2-d0a26f8ead45": "Wijzig de e-mailadressen waarmee je berichten kan versturen. Alle informatie over afzenders en e-mails vind je op",
   "b67ee618-6873-4dfe-84b6-faa51f37d661": "Standaard",
   "82395203-b523-4188-b304-0b07aea519cf": "Je hebt nog geen e-mailadressen toegevoegd.",
   "d1e7abf8-20ac-49e5-8e0c-cc7fab78fc6b": "Versturen",
