Added sendAsEmail columns

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -4091,7 +4091,6 @@
   "9f87bc88-6829-46dc-8bf3-333437e7bee3": "Opsomming met bolletjes",
   "8d17be46-de96-4e84-af15-6bd18e8b4b17": "Opsomming met nummers",
   "1363c0ee-0f4b-43f8-a9ee-a2a6091e5d96": "E-mailadressen",
-  "3338f8ad-c4d7-4d09-9254-70bc3f0449a9": "Nieuwe e-mail",
   "a6d49891-5af9-4dee-8dba-57ad854fb955": "Even geduld, de wijzigingen zijn nog aan het opslaan. Probeer straks opnieuw.",
   "8ea1d574-6388-4033-bb4e-f2e031d2da3b": "Ben je zeker dat je de e-mail wilt versturen?",
   "e0c68f8b-ccb1-4622-8570-08abc7f5705a": "Versturen",
@@ -5502,7 +5501,7 @@
   "1b509614-30b0-484c-af72-57d4bc9ea788": "Je hebt geen toegangsrechten om emails te versturen naar deze afzender.",
   "94adb4e0-2ef1-4ee8-9f02-5a76efa51c1d": "De afzender die je hebt gekozen bestaat niet meer. Probeer een andere afzender te kiezen. Herlaad indien nodig de app.",
   "f08cccb3-faf9-473f-b729-16120fadec9c": "De afzender van deze email bestaat niet meer. Probeer een andere afzender te kiezen.",
-  "a6304a41-8c83-419b-8e7e-c26f4a047c19": "Communicatie",
+  "a6304a41-8c83-419b-8e7e-c26f4a047c19": "Berichten",
   "feae4831-c229-4b2a-8dc1-c65184cbdfec": "Hier vind je een historiek van alle communicatie die werd verzonden. Wil je graag een bericht versturen, selecteer dan via het tabblad 'leden' of 'bestellingen' alle leden of bestellingen waar je naar wilt mailen.",
   "6e1f9492-f036-4b73-8e85-ccbae0d31ad7": "Bericht niet gevonden",
   "39a982c1-916a-43da-857d-a15f67c96c62": "Verzonden op",
@@ -5528,7 +5527,7 @@
   "c77d1dfb-a556-4373-9643-5ebe22dc7c21": "Versturen, bewerken en bekijken",
   "d049c682-f167-4dec-b909-4e1d4c443a94": "afzenders",
   "1407ad7f-146a-423f-8101-d6d3563e10cc": "afzender",
-  "7dfd0425-b8ff-4dec-8c6d-257d94eabbe7": "Communicatie",
+  "7dfd0425-b8ff-4dec-8c6d-257d94eabbe7": "Berichten",
   "0b3d6ea1-a70b-428c-9ba4-cc0c327ed415": "Deze webshop heeft geregistreerde verkopen bij UiTPAS. Je kan de webshop enkel archiveren.",
   "f3daff19-a227-4e45-b19a-c770bd7a6687": "Eén of meerdere UiTPAS-nummers zijn al gebruikt voor dit UiTPAS-evenement.",
   "83c472b8-4bc5-4282-bbc9-1c6a2d382171": "Het kansentarief voor sommige UiTPAS-nummers kon niet worden opgehaald.",
