Added multi product selection for webshop discounts

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -1838,7 +1838,7 @@
   "f8d8782a-94b1-47a7-9be9-fa49a8f5b80e": "Afhaallocatie toevoegen",
   "fe3e7e2f-0fd3-440a-a904-5fa99943371b": "Leveringsoptie toevoegen",
   "9bbdb9e4-fc41-4135-8ad1-f55f61a7aa63": "Algemene kortingen",
-  "180981ba-a251-4d5f-bcfa-6256b238b5c5": "Algemene kortingen worden automatisch toegepast op alle bestellingen, eventueel onder bepaalde voorwaarden.",
+  "180981ba-a251-4d5f-bcfa-6256b238b5c5": "Algemene kortingen worden automatisch toegepast op alle bestellingen, eventueel onder bepaalde voorwaarden. Opgelet, als je meerdere algemene kortingen toevoegt, worden ze apart uitgerekend en samengeteld.",
   "6a35dc73-d0b6-4785-acb8-0a49460abbf0": "Algemene korting",
   "8b322fca-7359-434a-9813-0ab2565cc2a6": "Kortingscodes",
   "29f1eed1-3fc5-4714-98f4-4c71d63d0d65": "Bestellers kunnen een kortingscode inruilen door een link te gebruiken of door manueel de code in te typen bij het openen van het winkelmandje.",
