Improved flow for setting canShowInMemberPortal

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -585,7 +585,7 @@
   "665781fd-c032-4083-900d-fd0356334752": "Laatst gewijzigd op: {date}",
   "6235923a-a1bc-433e-b2a3-639b37627f27": "Standaard sjabloon wordt gebruikt",
   "68b462bf-9ed9-4509-9b1b-0f1800e0e9ad": "Geen emailtemplates gevonden",
-  "0f0113ca-2269-49c3-b5f2-423005f71afc": "Huidige e-mail opslaan",
+  "0f0113ca-2269-49c3-b5f2-423005f71afc": "Huidig bericht opslaan",
   "6ecc6d7f-35dd-4459-b8d0-ce5b780b8012": "Nieuw sjabloon naar leden",
   "c88003a3-8582-4e59-a8d3-b3e77b4f01ed": "Nieuw sjabloon naar openstaande bedragen",
   "27eb0afb-0411-4036-894c-4c214fdf946c": "Kies een e-mailsjabloon",
@@ -2550,7 +2550,7 @@
   "6b77538c-6e3a-461c-9f97-f3aa71c8838d": "Wijzig sjabloon",
   "709a5ff3-8d79-447b-906d-2c3cdabb41cf": "Onderwerp",
   "6a972ca2-8a5f-4e9d-bb26-b59e1f7165a2": "E-mail template",
-  "13b42902-e159-4e6a-8562-e87c9c691c8b": "Typ hier het onderwerp van je e-mail",
+  "13b42902-e159-4e6a-8562-e87c9c691c8b": "Typ hier het onderwerp van je bericht",
   "c5602934-95a8-437d-b576-eda8d9e6565e": "Afzender toevoegen",
   "ed3e84f0-7ab3-467b-948f-0423ccbf2056": "Afzender bewerken",
   "85f5de69-bc8a-4f8d-be68-e6b05f6affce": "Voor algemene e-mails of voor antwoorden op automatische e-mails als domeinnaam niet ingesteld is (bv. als antwoord op bestelbevestiging).",
