Fixed confirmation toast

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -4094,7 +4094,7 @@
   "a6d49891-5af9-4dee-8dba-57ad854fb955": "Even geduld, de wijzigingen zijn nog aan het opslaan. Probeer straks opnieuw.",
   "8ea1d574-6388-4033-bb4e-f2e031d2da3b": "Ben je zeker dat je de e-mail wilt versturen?",
   "e0c68f8b-ccb1-4622-8570-08abc7f5705a": "Versturen",
-  "0adee17a-6cb5-4b32-a2a9-c6f44cbb3e7d": "De e-mail is verzonden. Het kan even duren voor alle e-mails zijn verstuurd.",
+  "0adee17a-6cb5-4b32-a2a9-c6f44cbb3e7d": "De e-mail wordt nu verzonden. Het kan even duren voor alle e-mails zijn verstuurd.",
   "d8b6c55e-72c5-4cde-bdd9-cee3b5bae6ae": "Onbekend",
   "93533097-46c1-4f88-a582-1634d57ac2c0": "Bestanden groter dan 10MB kunnen niet worden verstuurd.",
   "70436d52-5a86-4231-89d5-2adf8bfd628f": "We raden af om Word of Excel bestanden door te sturen omdat veel mensen hun e-mails lezen op hun smartphone en die bestanden vaak niet (correct) kunnen openen. Sommige mensen hebben ook geen licentie voor Word/Excel, want dat is niet gratis. Zet de bestanden om in een PDF en stuur die door.",
