Fixed weird column name

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -2862,7 +2862,7 @@
   "5173cc6a-ed5a-4c13-9b17-e2499ebffbd5": "lid",
   "c8f957b8-9255-44ed-973e-7c3cd1636137": "→ Aantal \"",
   "b697f010-9b5f-4944-8cae-8c8649d2c2f2": "Unieke identificatie van het lid",
-  "f4b7e513-6e08-4b46-a3ae-3e4a974f1a3e": "Nummer van het lid",
+  "f4b7e513-6e08-4b46-a3ae-3e4a974f1a3e": "Lidnummer",
   "01e99208-dce7-4109-8cf2-3cc74c4df45c": "Adres van het lid, of het adres van de eerste ouder met een adres.",
   "aa45000f-8cff-4cb6-99b2-3202eb64c4a8": "Code om een onbekende gebruiker toegang te geven tot een lid.",
   "d70f2a7f-d8b4-4846-8dc0-a8e978765b9d": "UiTPAS-nummer",
